--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sat Mar 19 23:47:47 BDT 2022
-sdk.dir=C\:\\Users\\Anik\\AppData\\Local\\Android\\Sdk
+#Sat Jun 10 23:18:17 BDT 2023
+sdk.dir=/home/carbonanik/Android/Sdk
